<resources>
    <string name="app_name">ShopClaws</string>
    <string name="title_activity_display2">Display2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="item_1">Fashion</string>
    <string name="item_2">Books</string>
    <string name="item_3">Electronics</string>
    <string name="item_4">Furniture</string>
    <string name="item_5">Others</string>

    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="help_support"><![CDATA[Help & Support]]></string>


    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string-array name="status">
        <item>Select Item</item>
        <item>Fashion</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Others</item>
    </string-array>
</resources>
