<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/item_4" />
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/ic_devices_other_black_24dp"
            android:title="@string/item_5" />

    </group>

    <item android:title="Chat">
        <menu>
            <item
                android:id="@+id/globalchat"
                android:title="Global Chat"
                android:icon="@drawable/ic_chat_black_24dp"/>
            <item
                android:id="@+id/personalchat"
                android:title="Vis-A-Vis"
                android:icon="@drawable/ic_chat_black_24dp"/>
        </menu>
    </item>

    <item android:title="Graph">
        <menu>
            <item
                android:id="@+id/graph"
                android:icon="@drawable/ic_graphic_eq_black_24dp"
                android:title="Performance Index"/>
            <item
                android:id="@+id/graph2"
                android:icon="@drawable/ic_graphic_eq_black_24dp"
                android:title="My Sales"/>
            <item
                android:id="@+id/predictgraph"
                android:icon="@drawable/ic_assessment_black_24dp"
                android:title="Predict"/>
        </menu>
    </item>

    <item android:title="@string/my_profile">
        <menu>

            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_account" />
            <item
                android:id="@+id/Logout_item"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Log Out"
                />

        </menu>
    </item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />

        </menu>
    </item>

</menu>
